GebaN, the Broker 改翻成 仲介商．Ｇ瘦

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -618,9 +618,9 @@ ID,Revision,Text,Location,Section,Context,Actor,Voice Actor,Old Revision,Old Tex
 2114,194283,In It For The Gold,Data/Achievement.lua(00452),,Achievement In It For The Gold display_name,,,,,,金錢至上,,OK,,
 2115,194283,Acquired 150 000 pieces of Gold,Data/Achievement.lua(00453),,Achievement In It For The Gold description,,,,,,"已獲取150,000枚金幣。",,OK,,
 2116,194283,Acquire 150 000 pieces of Gold,Data/Achievement.lua(00454),,Achievement In It For The Gold how_to,,,,,,"獲取150,000枚金幣。",,OK,,
-2117,194283,Steamed Up,Data/Achievement.lua(00462),,Achievement Steamed Up display_name,,,,,,蒸汽日上,,OK,,
-2118,194283,Traded with GebaN,Data/Achievement.lua(00463),,Achievement Steamed Up description,,,,,,已與格邦交易。,,OK,,
-2119,194283,Trade with GebaN,Data/Achievement.lua(00464),,Achievement Steamed Up how_to,,,,,,與格邦交易。,,OK,,
+2117,194283,Steamed Up,Data/Achievement.lua(00462),,Achievement Steamed Up display_name,,,,,,蒸蒸日胖,,OK,,
+2118,194283,Traded with GebaN,Data/Achievement.lua(00463),,Achievement Steamed Up description,,,,,,已與Ｇ瘦交易。,,OK,,
+2119,194283,Trade with GebaN,Data/Achievement.lua(00464),,Achievement Steamed Up how_to,,,,,,與Ｇ瘦交易。,,OK,,
 2120,194283,De-chromer,Data/Achievement.lua(00471),,Achievement De-chromer display_name,,,,,,彩色變黑白,,OK,,
 2121,194283,Slayed the Chromatic Essence,Data/Achievement.lua(00472),,Achievement De-chromer description,,,,,,已擊殺五彩原質。,,OK,,
 2122,194283,Slay the Chromatic Essence,Data/Achievement.lua(00473),,Achievement De-chromer how_to,,,,,,擊殺五彩原質。,,OK,,
@@ -1169,7 +1169,7 @@ Only one Power Stone can be used per transmutation.",Data/CodexEntry.lua(00221),
 2417,194283,The City Gates,Data/MapName.lua(00012),,MapName Tutorial DisplayName,,,,,,城門,,OK,,
 2418,196645,"I released the Guards from the cruel fate of the undead and took whatever I could from the Fallen Keep. I can see the imposing silhouette of Castle Zagore, standing proud like the tallest headstone in this graveyard of a city. I think I can make out lights on the upper floors. Perhaps there are survivors behind the tall walls of the castle.",Data/MapName.lua(00013),,MapName Tutorial Description,,,,,,我把守衛從不死的殘酷命運中解放了出來，並搜括了淪陷的堡壘。從這裡能看到扎古爾城的宏偉輪廓傲然挺立，仿佛這墓園中最高聳的墓碑一樣。我依稀能看到上層有微弱的燈光，也許在那厚厚的高牆背後還有倖存者。,,OK,,
 4225,196645,Bottomless Pit,Data/MapName.lua(00018),,MapName ArenaPlatforms DisplayName,,,,,,無底洞,,OK,,
-4226,196725,"I have persuaded GebaN, the demon broker, to grant me access to a mysterious void-world known as the Bottomless Pit. An experienced merchant's gamble no doubt. The lower I descend into this starry hell, tougher demons increase the odds that GebaN will have new stock to sell after he loots it from my dead body.",Data/MapName.lua(00020),,MapName ArenaPlatforms Description,,,,,,我已經說服了惡魔仲介者．格邦，讓我進入名為無底洞的神祕虛空世界。毫無疑問，這一定是老奸商的一場賭博。我在這地獄中走得越深，惡魔就越強大，格邦從我屍體上找到新貨來出售的機會就越大。,,OK,,
+4226,196725,"I have persuaded GebaN, the demon broker, to grant me access to a mysterious void-world known as the Bottomless Pit. An experienced merchant's gamble no doubt. The lower I descend into this starry hell, tougher demons increase the odds that GebaN will have new stock to sell after he loots it from my dead body.",Data/MapName.lua(00020),,MapName ArenaPlatforms Description,,,,,,我已經說服了惡魔仲介商．Ｇ瘦，讓我進入名為無底洞的神祕虛空世界。毫無疑問，這一定是老奸商的一場賭博。我在這地獄中走得越深，惡魔就越強大，Ｇ瘦從我屍體上找到新貨來出售的機會就越大。,,OK,,
 2419,194283,Fallen Keep,Data/MapName.lua(00027),,MapName Tutorial_Dungeon DisplayName,,,,,,淪陷的堡壘,,OK,,
 2420,194283,"The gates of the keep are shut tight. I found an alternative route through a broken sewer grate. By the looks of it, something else passed through before me. The place reeks of death and I am beginning to doubt that there are any survivors here.",Data/MapName.lua(00028),,MapName Tutorial_Dungeon Description,,,,,,堡壘的大門緊閉。我找到了另一條進去的路，通過破損的下水道柵欄。看樣子，有什麼東西在我之前就通過了。到處瀰漫著死亡的氣息，我開始懷疑這裡是否還有倖存者了。,,OK,,
 2421,194283,Weeping Halls,Data/MapName.lua(00033),,MapName AmuletDungeon DisplayName,,,,,,哀泣大廳,,OK,,
@@ -1222,9 +1222,9 @@ Only one Power Stone can be used per transmutation.",Data/CodexEntry.lua(00221),
 2604,194283,Irene,Data/NPC.lua(00005),,NPC Nadezhda display_name,,,,,,艾琳,,OK,,
 2605,194283,Victor Vran,Data/NPC.lua(00013),,NPC Hero display_name,,,,,,維克多．弗蘭,,OK,,
 2606,194283,Private Stash,Data/NPC.lua(00019),,NPC Stash display_name,,,,,,斯戴許士兵,,OK,,
-2607,194283,GebaN the Broker,Data/NPC.lua(00042),,NPC GebaN display_name,,,,,,仲介者．格邦,,OK,,
-4662,199653,GebaN the Broker,Data/NPC.lua(00050),,NPC GebaN display_name,,,0,,,仲介者．格邦,,new,,
-4663,199653,GebaN the Broker,Data/NPC.lua(00058),,NPC DemonSoulsVendor display_name,,,0,,,仲介者．格邦,,new,,
+2607,194283,GebaN the Broker,Data/NPC.lua(00042),,NPC GebaN display_name,,,,,,仲介商．Ｇ瘦,,OK,,
+4662,199653,GebaN the Broker,Data/NPC.lua(00050),,NPC GebaN display_name,,,0,,,仲介商．Ｇ瘦,,new,,
+4663,199653,GebaN the Broker,Data/NPC.lua(00058),,NPC DemonSoulsVendor display_name,,,0,,,仲介商．Ｇ瘦,,new,,
 2608,194283,Queen Katarina,Data/NPC.lua(00066),,NPC Tzarina display_name,,,,,,卡特蓮娜女王,,OK,,
 2609,194283,Sir Krum,Data/NPC.lua(00073),,NPC Guard display_name,,,,,,克魯姆爵士,,OK,,
 2610,194283,Damian,Data/NPC.lua(00080),,NPC Alchemist display_name,,,,,,戴米恩,,OK,,
@@ -1291,10 +1291,10 @@ Only one Power Stone can be used per transmutation.",Data/CodexEntry.lua(00221),
 2671,194283,Test Out Your New Shotgun,Data/Quest.lua(00292),,,,,,,,測試霰彈槍的性能,,OK,,
 2672,194283,Hit the dummies with shotgun special attacks (<progress>/<count>),Data/Quest.lua(00293),,,,,,,,使用霰彈槍的招式射擊假人（<progress>/<count>）,,OK,,
 2673,194283,Hit the dummies with shotgun special attacks (<progress>/<count>),Data/Quest.lua(00294),,,,,,,,使用霰彈槍的招式射擊假人（<progress>/<count>）,,OK,,
-2677,194283,Meet the GebaN,Data/Quest.lua(00306),,,,,,,,與格邦會面,,OK,,
-2678,194283,Meet the GebaN,Data/Quest.lua(00307),,,,,,,,與格邦會面,,OK,,
-2679,194283,Meet the GebaN,Data/Quest.lua(00308),,,,,,,,與格邦會面,,OK,,
-2680,194283,Meet the GebaN,Data/Quest.lua(00309),,,,,,,,與格邦會面,,OK,,
+2677,194283,Meet the GebaN,Data/Quest.lua(00306),,,,,,,,與Ｇ瘦會面,,OK,,
+2678,194283,Meet the GebaN,Data/Quest.lua(00307),,,,,,,,與Ｇ瘦會面,,OK,,
+2679,194283,Meet the GebaN,Data/Quest.lua(00308),,,,,,,,與Ｇ瘦會面,,OK,,
+2680,194283,Meet the GebaN,Data/Quest.lua(00309),,,,,,,,與Ｇ瘦會面,,OK,,
 2687,194283,Finding Adrian,Data/Quest.lua(00327),,,,,,,,尋找艾德里安,,OK,,
 2688,194854,Explore the Royal Gardens,Data/Quest.lua(00328),,,,,,,,探索皇家花園,,OK,,
 2689,194283,Talk to Irene,Data/Quest.lua(00329),,,,,,,,與艾琳交談,,OK,,
@@ -2181,7 +2181,7 @@ Combine with other Gift Boxes in Transmutation to get better items",Lua/Item.lua
 624,194283,You need Overdrive to cast Demon Powers,Lua/LoadingTips.lua(00062),,,,,,,,你需要超能來施展惡魔之力。,,OK,,
 625,194283,"Deal damage to monsters to gain Overdrive. The more damage you do, the more Overdrive you gain",Lua/LoadingTips.lua(00063),,,,,,,,對怪物造成傷害可凝聚超能。傷害越高，凝聚的超能越多。,,OK,,
 626,194283,In multiplayer you share challenge progress only with those in range,Lua/LoadingTips.lua(00065),,,,,,,,多人遊戲時，你只與範圍內的玩家共享挑戰進度。,,OK,,
-4138,196097,Press F1 to notify us about any issues you have encountered while playing,Lua/LoadingTips.lua(00066),,,,,,,,按F1回報你在遊戲中遇到的任何問題。,,OK,,
+4138,196097,Press F1 to notify us about any issues you have encountered while playing,Lua/LoadingTips.lua(00066),,,,,,,,按<lightgreen>F1</lightgreen>回報你在遊戲中遇到的任何問題。,,OK,,
 4178,196259,Your game progress is saved automatically,Lua/LoadingTips.lua(00067),,,,,,,,遊戲進度會自動儲存。,,OK,,
 4026,195942,Transmutation allows you to add new properties to your existing weapons,Lua/LoadingTips.lua(00069),,,,,,,,合成能讓你附加新屬性到已有的武器上。,,OK,,
 4027,195942,You can maximize the characteristics of your items using the transmutation system,Lua/LoadingTips.lua(00070),,,,,,,,你可以利用合成系統充分發揮你物品的特性。,,OK,,
@@ -4836,7 +4836,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 100427,29744,Dinner Guest,maps/MansionInterior/objects.lua(10218),,,,,,,,晚宴嘉賓,,OK,,
 100051,28897,The Mansion Interior,maps/MansionInterior/objects.lua(27213),,,,,,,,府邸內庭,,OK,,
 100428,29744,The Ethereal Dinner,maps/MansionInterior/scenario.lua(00200),,Scenario MansionInterior (3) Text,,,,,,以太晚宴,,OK,,
-100052,28897,"GebaN, The Broker",maps/MarketPlace/objects.lua(22405),,,,,,,,仲介者．格邦,,OK,,
+100052,28897,"GebaN, The Broker",maps/MarketPlace/objects.lua(22405),,,,,,,,仲介商．Ｇ瘦,,OK,,
 100053,28897,Serene Dead,maps/MarketPlace/objects.lua(37326),,,,,,,,安詳的亡者,,OK,,
 100054,28897,Serene Dead,maps/MarketPlace/objects.lua(37355),,,,,,,,安詳的亡者,,OK,,
 100055,28897,Serene Dead,maps/MarketPlace/objects.lua(37547),,,,,,,,安詳的亡者,,OK,,
@@ -4926,7 +4926,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 100140,28897,Juliet,maps/PoorNeighborhood_Cellar2/objects.lua(02574),,,,,,,,朱麗葉,,OK,,
 100141,28897,Chamber of Decay,maps/PoorNeighborhood_Dungeon/objects.lua(05950),,,,,,,,腐朽墓室,,OK,,
 100142,28897,The Wild Hunter,maps/PoorNeighborhood_SmallCave1/objects.lua(04086),,,,,,,,狂野獵人,,OK,,
-100143,28897,"GebaN, the Broker",maps/RichCemetery/objects.lua(01591),,,,,,,,仲介者．格邦,,OK,,
+100143,28897,"GebaN, the Broker",maps/RichCemetery/objects.lua(01591),,,,,,,,仲介商．Ｇ瘦,,OK,,
 100144,28897,The Porter,maps/RichCemetery/objects.lua(01652),,,,,,,,守墓人,,OK,,
 100145,28897,"Ignus, the Burning",maps/RichCemetery/objects.lua(03929),,,,,,,,浴火者．伊格納斯,,OK,,
 100146,28897,Spite of Ignus,maps/RichCemetery/objects.lua(03941),,,,,,,,伊格納斯之怨,,OK,,
@@ -6485,7 +6485,7 @@ Frankly, your current equipment is mediocre at best. Take a look at some of my s
 3120,194283,"You'll get there, Victor. You'll get there.",Data/Scenario/Banters_RichCemetery.lua(00068),Act2 04 Banters_RichCemetery,,Voice,Voice,,,,你會到達的，維克多，你會的。,,OK,,
 3121,194283,An ancient being roams the corridors of the Mausoleum. He is knowledgeable and powerful but I'm afraid he dislikes guests.,Data/Scenario/Banters_RichCemetery.lua(00079),Act2 04 Banters_RichCemetery,,Voice,Voice,,,,一個古老的生物在陵墓的走廊遊蕩。祂知識淵博、力量強大，但祂恐怕不喜歡客人。,,OK,,
 3122,194283,"Come on, Victor, I dare you enter. You're not afraid, are you?",Data/Scenario/Banters_RichCemetery.lua(00083),Act2 04 Banters_RichCemetery,,Voice,Voice,,,,來呀，維克多，我賭你不敢進去。你不是不怕嗎？,,OK,,
-3123,194283,"Victor, I want you to meet the Broker!",Data/Scenario/Banters_RichCemetery.lua(00094),Act2 04 Banters_RichCemetery,,Voice,Voice,,,,維克多，我要你見見仲介者！,,OK,,
+3123,194283,"Victor, I want you to meet the Broker!",Data/Scenario/Banters_RichCemetery.lua(00094),Act2 04 Banters_RichCemetery,,Voice,Voice,,,,維克多，我要你見見仲介商！,,OK,,
 3124,194283,"He has some steaming-hot promotions for you. Go ahead, talk to him!",Data/Scenario/Banters_RichCemetery.lua(00098),Act2 04 Banters_RichCemetery,,Voice,Voice,,,,祂那有剛出爐的促銷等著你。去吧，和祂說話！,,OK,,
 3125,194283,I'm glad I'm finally out of this gloomy place.,Data/Scenario/Banters_RichCemetery.lua(00109),Act2 04 Banters_RichCemetery,,Victor Vran,Victor Vran,,,,很高興終於能離開這個陰鬱的地方了。,,OK,,
 3126,196015,"Nonsense, Victor! Zagoravia is so beautiful at this time of the year - and our tour has just begun!",Data/Scenario/Banters_RichCemetery.lua(00113),Act2 04 Banters_RichCemetery,,Voice,Voice,,,,胡扯，維克多！扎古拉維亞每年的這個時候最美──而且我們的旅程才剛剛開始！,,OK,,
@@ -6872,8 +6872,8 @@ Find Gabriel in his mansion beyond the industrial quarter, hunter. He has always
 4613,199160,Completed: All Hexes,Lua/LocalizationTexts.lua(00237),Trailer: Character,,,,,,,完成：全部禁咒,,OK,,
 4614,199160,The Cauldron of Chaos,Lua/LocalizationTexts.lua(00242),Trailer: Character,,,,,,,混沌之局,,OK,,
 4615,199160,Demon Soul,Lua/LocalizationTexts.lua(00243),Trailer: Character,,,,,,,惡魔之魂,,OK,,
-4616,199160,Trade this with GebaN for special items.,Lua/LocalizationTexts.lua(00244),Trailer: Character,,,,,,,用這個與格邦交易特殊物品。,,OK,,
-4617,199160,Trade this with GebaN in the Cauldron of Chaos for special items.,Lua/LocalizationTexts.lua(00245),Trailer: Character,,,,,,,用這個與混沌之局裡的格邦交易特殊物品。,,OK,,
+4616,199160,Trade this with GebaN for special items.,Lua/LocalizationTexts.lua(00244),Trailer: Character,,,,,,,用這個與Ｇ瘦交易特殊物品。,,OK,,
+4617,199160,Trade this with GebaN in the Cauldron of Chaos for special items.,Lua/LocalizationTexts.lua(00245),Trailer: Character,,,,,,,用這個與混沌之局裡的Ｇ瘦交易特殊物品。,,OK,,
 4688,200080,Carved Box,Lua/LocalizationTexts.lua(00251),Trailer: Character,,,,0,,,雕花箱,,new,,
 4689,200080,Trick or Treat!,Lua/LocalizationTexts.lua(00252),Trailer: Character,,,,0,,,不給糖就搗蛋！,,new,,
 4703,200087,Invite Player,Lua/LocalizationTexts.lua(00256),Trailer: Character,,,,0,,,邀請玩家,,new,,
