--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -508,14 +508,14 @@ ID,Revision,Text,Location,Section,Context,Actor,Voice Actor,Old Revision,Old Tex
 1998,194283,Made 15000 kills with 5 active Hexes,Data/Achievement.lua(00079),,Achievement Serious Vran description,,,,,,已在啟用5個禁咒的情況下達成15000擊殺數。,,OK,,
 1999,194283,Make 15000 kills with 5 active Hexes,Data/Achievement.lua(00080),,Achievement Serious Vran how_to,,,,,,在啟用5個禁咒的情況下達成15000擊殺數。,,OK,,
 2000,194283,Tactical Vran,Data/Achievement.lua(00089),,Achievement Tactical Vran display_name,,,,,,戰術高手,,OK,,
-2001,194283,Killed 25 enemies with a single attack,Data/Achievement.lua(00090),,Achievement Tactical Vran description,,,,,,已用一招擊殺25個敵人。,,OK,,
-2002,194283,Kill 25 enemies with a single attack,Data/Achievement.lua(00091),,Achievement Tactical Vran how_to,,,,,,用一招擊殺25個敵人。,,OK,,
+2001,194283,Killed 25 enemies with a single attack,Data/Achievement.lua(00090),,Achievement Tactical Vran description,,,,,,已用一招殺死25個敵人。,,OK,,
+2002,194283,Kill 25 enemies with a single attack,Data/Achievement.lua(00091),,Achievement Tactical Vran how_to,,,,,,用一招殺死25個敵人。,,OK,,
 2003,194283,Demonomicon,Data/Achievement.lua(00099),,Achievement Demonomicon display_name,,,,,,惡魔全書,,OK,,
-2004,194283,Killed 50 enemies with a single demon power,Data/Achievement.lua(00100),,Achievement Demonomicon description,,,,,,已用一次惡魔之力擊殺50個敵人。,,OK,,
-2005,194283,Kill 50 enemies with a single demon power,Data/Achievement.lua(00101),,Achievement Demonomicon how_to,,,,,,用一次惡魔之力擊殺50個敵人。,,OK,,
+2004,194283,Killed 50 enemies with a single demon power,Data/Achievement.lua(00100),,Achievement Demonomicon description,,,,,,已用一次惡魔之力殺死50個敵人。,,OK,,
+2005,194283,Kill 50 enemies with a single demon power,Data/Achievement.lua(00101),,Achievement Demonomicon how_to,,,,,,用一次惡魔之力殺死50個敵人。,,OK,,
 2006,194283,Abstinence Kills,Data/Achievement.lua(00109),,Achievement Abstinence Kills display_name,,,,,,節儉殺手,,OK,,
-2007,194283,Killed 500 enemies without using consumables,Data/Achievement.lua(00110),,Achievement Abstinence Kills description,,,,,,已不使用消耗品擊殺500個敵人。,,OK,,
-2008,194283,Kill 500 enemies without using consumables,Data/Achievement.lua(00111),,Achievement Abstinence Kills how_to,,,,,,不使用消耗品擊殺500個敵人。,,OK,,
+2007,194283,Killed 500 enemies without using consumables,Data/Achievement.lua(00110),,Achievement Abstinence Kills description,,,,,,已不使用消耗品殺死500個敵人。,,OK,,
+2008,194283,Kill 500 enemies without using consumables,Data/Achievement.lua(00111),,Achievement Abstinence Kills how_to,,,,,,不使用消耗品殺死500個敵人。,,OK,,
 2009,194283,Slashing Pumpkins,Data/Achievement.lua(00119),,Achievement Slashing Pumpkins display_name,,,,,,南瓜殺手,,OK,,
 2010,194283,Destroyed 100 pumpkins,Data/Achievement.lua(00120),,Achievement Slashing Pumpkins description,,,,,,已毀掉100個南瓜。,,OK,,
 2011,194283,Destroy 100 pumpkins,Data/Achievement.lua(00121),,Achievement Slashing Pumpkins how_to,,,,,,毀掉100個南瓜。,,OK,,
@@ -577,8 +577,8 @@ ID,Revision,Text,Location,Section,Context,Actor,Voice Actor,Old Revision,Old Tex
 2058,194283,Defeated 25 Champions or Tyrants,Data/Achievement.lua(00307),,Achievement We are the Champions! description,,,,,,已擊敗25個悍將或暴君。,,OK,,
 2059,194283,Defeat 25 Champions or Tyrants,Data/Achievement.lua(00308),,Achievement We are the Champions! how_to,,,,,,擊敗25個悍將或暴君。,,OK,,
 2060,194283,Utilizer,Data/Achievement.lua(00316),,Achievement Utilizer display_name,,,,,,善加利用,,OK,,
-2061,194283,Had 100 monsters being killed by their peers,Data/Achievement.lua(00317),,Achievement Utilizer description,,,,,,已使100隻怪物被同伴擊殺。,,OK,,
-2062,194283,Have 100 monsters being killed by their peers,Data/Achievement.lua(00318),,Achievement Utilizer how_to,,,,,,使100隻怪物被同伴擊殺。,,OK,,
+2061,194283,Had 100 monsters being killed by their peers,Data/Achievement.lua(00317),,Achievement Utilizer description,,,,,,已使100隻怪物被同伴殺死。,,OK,,
+2062,194283,Have 100 monsters being killed by their peers,Data/Achievement.lua(00318),,Achievement Utilizer how_to,,,,,,使100隻怪物被同伴殺死。,,OK,,
 2066,194283,Foursome,Data/Achievement.lua(00326),,Achievement Foursome display_name,,,,,,四人小隊,,OK,,
 2067,194283,Defeated Adrian The Fallen with a party of 4 in multiplayer,Data/Achievement.lua(00327),,Achievement Foursome description,,,,,,已在多人遊戲中以四人小隊擊敗墮落者艾德里安。,,OK,,
 2068,194283,Defeat Adrian The Fallen with a party of 4 in multiplayer,Data/Achievement.lua(00328),,Achievement Foursome how_to,,,,,,在多人遊戲中以四人小隊擊敗墮落者艾德里安。,,OK,,
@@ -622,11 +622,11 @@ ID,Revision,Text,Location,Section,Context,Actor,Voice Actor,Old Revision,Old Tex
 2118,194283,Traded with GebaN,Data/Achievement.lua(00463),,Achievement Steamed Up description,,,,,,已與Ｇ瘦交易。,,OK,,
 2119,194283,Trade with GebaN,Data/Achievement.lua(00464),,Achievement Steamed Up how_to,,,,,,與Ｇ瘦交易。,,OK,,
 2120,194283,De-chromer,Data/Achievement.lua(00471),,Achievement De-chromer display_name,,,,,,彩色變黑白,,OK,,
-2121,194283,Slayed the Chromatic Essence,Data/Achievement.lua(00472),,Achievement De-chromer description,,,,,,已擊殺五彩原質。,,OK,,
-2122,194283,Slay the Chromatic Essence,Data/Achievement.lua(00473),,Achievement De-chromer how_to,,,,,,擊殺五彩原質。,,OK,,
+2121,194283,Slayed the Chromatic Essence,Data/Achievement.lua(00472),,Achievement De-chromer description,,,,,,已殺死五彩原質。,,OK,,
+2122,194283,Slay the Chromatic Essence,Data/Achievement.lua(00473),,Achievement De-chromer how_to,,,,,,殺死五彩原質。,,OK,,
 2123,194283,The Silencer,Data/Achievement.lua(00480),,Achievement The Silencer display_name,,,,,,消音器,,OK,,
-2124,194283,Slayed the Screeching Calamity,Data/Achievement.lua(00481),,Achievement The Silencer description,,,,,,已擊殺嘯聲之災。,,OK,,
-2125,194283,Slay the Screeching Calamity,Data/Achievement.lua(00482),,Achievement The Silencer how_to,,,,,,擊殺嘯聲之災。,,OK,,
+2124,194283,Slayed the Screeching Calamity,Data/Achievement.lua(00481),,Achievement The Silencer description,,,,,,已殺死嘯聲之災。,,OK,,
+2125,194283,Slay the Screeching Calamity,Data/Achievement.lua(00482),,Achievement The Silencer how_to,,,,,,殺死嘯聲之災。,,OK,,
 2126,194283,Cruel Giant,Data/Achievement.lua(00489),,Achievement Cruel Giant display_name,,,,,,殘忍巨人,,OK,,
 2127,194283,Stepped on 10 Mites within 5 seconds,Data/Achievement.lua(00490),,Achievement Cruel Giant description,,,,,,已在5秒內踩死10隻小蜘蛛。,,OK,,
 2128,194283,Step on 10 Mites within 5 seconds,Data/Achievement.lua(00491),,Achievement Cruel Giant how_to,,,,,,在5秒內踩死10隻小蜘蛛。,,OK,,
@@ -1695,7 +1695,7 @@ Only one Power Stone can be used per transmutation.",Data/CodexEntry.lua(00221),
 181,194283,The Guardian,Lua/DestinyCard.lua(01019),,,,,,,,守護者,,OK,,
 182,194283,The Divine Guardian,Lua/DestinyCard.lua(01020),,,,,,,,神聖守護者,,OK,,
 183,194283,The Wicked Guardian,Lua/DestinyCard.lua(01021),,,,,,,,邪惡守護者,,OK,,
-184,198395,"Release an explosion when hit in melee (<lightgreen><damage></lightgreen> damage, <lightgreen><chance>%</lightgreen> chance) that ignores armor. The explosion has a chance to Electrocute foes",Lua/DestinyCard.lua(01033),,,,,,,,近戰擊中時引發無視防禦的爆炸（<lightgreen><damage></lightgreen>傷 害， <lightgreen><chance>%</lightgreen>機 率 ） 。 爆 炸 有 機 率 會 使 敵 人 觸 電。,,OK,,
+184,198395,"Release an explosion when hit in melee (<lightgreen><damage></lightgreen> damage, <lightgreen><chance>%</lightgreen> chance) that ignores armor. The explosion has a chance to Electrocute foes",Lua/DestinyCard.lua(01033),,,,,,,,近戰擊中時引發無視防禦的爆炸（<lightgreen><damage></lightgreen>傷 害， <lightgreen><chance>%</lightgreen>機 率）。 爆 炸 有 機 率 會 使 敵 人 觸 電。,,OK,,
 185,194283,The Runner,Lua/DestinyCard.lua(01066),,,,,,,,跑者,,OK,,
 186,194283,The Divine Runner,Lua/DestinyCard.lua(01067),,,,,,,,神聖跑者,,OK,,
 187,194283,The Wicked Runner,Lua/DestinyCard.lua(01068),,,,,,,,邪惡跑者,,OK,,
@@ -1720,7 +1720,7 @@ Only one Power Stone can be used per transmutation.",Data/CodexEntry.lua(00221),
 206,194283,The Moon,Lua/DestinyCard.lua(01174),,,,,,,,月亮,,OK,,
 207,194283,The Divine Moon,Lua/DestinyCard.lua(01175),,,,,,,,神聖月亮,,OK,,
 208,194283,The Wicked Moon,Lua/DestinyCard.lua(01176),,,,,,,,邪惡月亮,,OK,,
-209,198395,"Cause a frost explosion on crit (<lightgreen><damage></lightgreen> damage, <cooldown> sec. cooldown) that ignores armor. All targets gain the <lightgreen2><condition_name></lightgreen2> condition.<condition_description>",Lua/DestinyCard.lua(01190),,,,,,,,暴擊時引發無視防禦的寒氣爆炸（<lightgreen><damage></lightgreen>傷害， 冷 卻 時 間<cooldown>秒 ）。 所 有 目 標 附 加 <lightgreen2><condition_name></lightgreen2>狀 態。<condition_description>,,OK,,
+209,198395,"Cause a frost explosion on crit (<lightgreen><damage></lightgreen> damage, <cooldown> sec. cooldown) that ignores armor. All targets gain the <lightgreen2><condition_name></lightgreen2> condition.<condition_description>",Lua/DestinyCard.lua(01190),,,,,,,,暴擊時引發無視防禦的寒氣爆炸（<lightgreen><damage></lightgreen>傷害， 冷 卻 時 間<cooldown>秒）。 所 有 目 標 附 加 <lightgreen2><condition_name></lightgreen2>狀 態。<condition_description>,,OK,,
 210,194283,The Sun,Lua/DestinyCard.lua(01229),,,,,,,,太陽,,OK,,
 211,194283,The Divine Sun,Lua/DestinyCard.lua(01230),,,,,,,,神聖太陽,,OK,,
 212,194283,The Wicked Sun,Lua/DestinyCard.lua(01231),,,,,,,,邪惡太陽,,OK,,
@@ -2136,7 +2136,7 @@ Combine with other Gift Boxes in Transmutation to get better items",Lua/Item.lua
 568,194283,New Destiny Slot,Lua/LevelRewards.lua(00388),,,,,,,,新命運牌槽,,OK,,
 569,194283,You can now equip more Destiny Cards. The Destiny Points cost of all equipped cards cannot exceed your total DP.,Lua/LevelRewards.lua(00389),,,,,,,,你現在可以裝備更多命運牌了。所有裝備的牌所消耗的命運點不能超過你的總命運點。,,OK,,
 570,194283,+<number> Health,Lua/LevelRewards.lua(00636),,,,,,,,提升<number>生命,,OK,,
-571,194283,"Congratulations! Your Health pool has increased, allowing you to endure more damage.",Lua/LevelRewards.lua(00637),,,,,,,,恭喜！你的生命力提升了，可讓你承受更大傷害。,,OK,,
+571,194283,"Congratulations! Your Health pool has increased, allowing you to endure more damage.",Lua/LevelRewards.lua(00637),,,,,,,,恭喜！你的生命提升了，可讓你承受更大傷害。,,OK,,
 566,194283,+<number> Destiny Points,Lua/LevelRewards.lua(00651),,,,,,,,增加<number>命運點,,OK,,
 567,194283,You can now equip more powerful Destiny Cards. The Destiny Points cost of all equipped cards cannot exceed your total DP.,Lua/LevelRewards.lua(00652),,,,,,,,你現在可以裝備更強力的命運牌了。所有裝備的牌所消耗的命運點不能超過你的總命運點。,,OK,,
 586,194283,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,Lua/LoadingTips.lua(00007),,,,,,,,<armor_icon>防禦有機率使攻擊擊偏，並顯著降低所受傷害。,,OK,,
@@ -6022,7 +6022,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 3322,194283,Not a human soul in sight.,Data/Scenario/Banters_Tutorial.lua(00019),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,完全不見半點人影。,,OK,,
 3323,194283,Monsters have claimed the streets.,Data/Scenario/Banters_Tutorial.lua(00030),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,怪物們占據了大街小巷。,,OK,,
 3324,194283,Dim lights shine through the dusty windows.,Data/Scenario/Banters_Tutorial.lua(00034),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,布滿灰塵的窗戶透出著黯淡的微光。,,OK,,
-3325,194409,I wonder what horrors hide behind them.,Data/Scenario/Banters_Tutorial.lua(00041),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,不曉得牠們背後隱藏著什麼樣的恐怖。,,OK,,
+3325,194409,I wonder what horrors hide behind them.,Data/Scenario/Banters_Tutorial.lua(00041),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,不知道牠們背後隱藏著什麼樣的恐怖。,,OK,,
 3326,194283,"I sense something hidden, something far more sinister than the monsters.",Data/Scenario/Banters_Tutorial.lua(00056),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,我能感覺到，某種遠比怪物更險惡的東西。,,OK,,
 3327,194283,Something faint. Like a whisper in the back of my mind.,Data/Scenario/Banters_Tutorial.lua(00060),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,幽幽地，像是我腦海中的耳語。,,OK,,
 3328,194283,Hello-o-o?,Data/Scenario/Banters_Tutorial.lua(00078),Act0 01 Tutorial Banters,,Voice,Voice,,,,哈囉～？,,OK,,
@@ -6939,7 +6939,7 @@ The Tzar seems to have some high hopes for you. But don't get yourself killed on
 2243,196015,"Don't be careful. Be frightful! Make this creature of the past feel your wrath! Avenge our Order! Good hunting, Victor Vran!",Data/Conversations/Nadezhda.lua(00237),side: Irene 04 Before final battle,,Irene,Irene,,,,不是要小心，你要變得恐怖！讓這個古老生物感受到你的憤怒！為我們的組織報仇！祝你狩獵豐收，維克多．弗蘭！,,OK,,
 2179,196015,"Praise heavens! God has answered our prayers in this hour of need and sent you here. I'm Casimir, servant of His will and patriarch of Zagoravia. You bring hope to my people and hope is what we need in these dark hours.
 
-My prayers will be with you.",Data/Conversations/Bozidar.lua(00017),side: Patriarch 01 Introduction,,Patriarch Casimir,Patriarch Casimir,,,,"讚美上天！上帝在這關鍵時刻回應了我們的祈禱，把你送到了我們身邊。我是卡西米爾，上帝的僕人，扎古拉維亞的牧首。你為我的子民帶來了希望，正是我們在這黑暗時期最需要的。
+My prayers will be with you.",Data/Conversations/Bozidar.lua(00017),side: Patriarch 01 Introduction,,Patriarch Casimir,Patriarch Casimir,,,,"讚美上天！上帝在這關鍵時刻回應了我們的祈禱，把你送到我們身邊。我是卡西米爾，上帝的僕人，扎古拉維亞的牧首。你為我的子民們帶來了希望，正是我們在這黑暗時期最需要的。
 
 我的祈禱將與你同在。",,OK,,
 2180,194283,"The heavens blessed Irene with a brave albeit somewhat hasty heart. Be patient with her, my son. You two stand together against the darkness!",Data/Conversations/Bozidar.lua(00030),"side: Patriarch 02 on Irene, after first meeting with Victor",,Patriarch Casimir,Patriarch Casimir,,,,上天賜予了艾琳勇敢、但稍微魯莽的心靈。對她保持耐心，孩子。你們要攜手對抗黑暗！,,OK,,
