compact 改成用向前排滿詮釋

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -3295,7 +3295,7 @@ Recipe: <rune_icon_1><rune_icon_2><rune_icon_3>",Lua/Transmutation.lua(00236),,,
 4264,197333,Sort by rarity,Lua/UI/BaseInventory.lua(00206),,,,,,,,依稀有度排序,,OK,,
 4265,197333,Sort by destiny points,Lua/UI/BaseInventory.lua(00218),,,,,,,,依命運點排序,,OK,,
 4266,197333,Sort by cost,Lua/UI/BaseInventory.lua(00220),,,,,,,,依價格排序,,OK,,
-3998,195716,Compact the <tab_title> tab,Lua/UI/BaseInventory.lua(00234),,,,,,,,堆壓<tab_title>,,OK,,
+3998,195716,Compact the <tab_title> tab,Lua/UI/BaseInventory.lua(00234),,,,,,,,向前排滿<tab_title>,,OK,,
 3999,195716,Back,Lua/UI/BaseInventory.lua(00243),,,,,,,,返回,,OK,,
 1084,194283,Close,Lua/UI/BaseInventory.lua(00669),,,,,,,,關閉,,OK,,
 1085,194283,Destroy Item,Lua/UI/BaseInventory.lua(00694),,,,,,,,銷毀物品,,OK,,
@@ -3540,7 +3540,7 @@ Note: Playing in Hard Mode is not recommended for your first character.",Lua/UI/
 4487,198919,Loot drops are reduced in Casual mode.,Lua/UI/InGameMainMenu.lua(00376),,,,,,,,在休閒模式下物品掉落數會降低。,,OK,,
 4488,198919,Switch to <game_mode>,Lua/UI/InGameMainMenu.lua(00379),,,,,,,,切換到<game_mode>,,OK,,
 4269,197333,Sort by destiny points,Lua/UI/Inventory.lua(00099),,,,,,,,依命運點排序,,OK,,
-1229,194283,Compact the inventory tab,Lua/UI/Inventory.lua(00105),,,,,,,,堆壓物品欄,,OK,,
+1229,194283,Compact the inventory tab,Lua/UI/Inventory.lua(00105),,,,,,,,向前排滿,,OK,,
 1230,194283,Close,Lua/UI/Inventory.lua(00111),,,,,,,,關閉,,OK,,
 4008,195716,Menu,Lua/UI/Inventory.lua(00122),,,,,,,,選單,,OK,,
 4258,197333,Here is a treasure key you can redeem: <key>,Lua/UI/Inventory.lua(00447),,,,,,,,這是可以兌換的密碼：<key>,,OK,,
@@ -3941,7 +3941,7 @@ Code ""<err>""",Lua/UI/MenuOnline.lua(01379),,,,,,,,"抱歉，伺服器回傳一
 4267,197333,Sort by type,Lua/UI/Stash.lua(00007),,,,,,,,依類型排序,,OK,,
 4268,197333,Sort by rarity,Lua/UI/Stash.lua(00013),,,,,,,,依稀有度排序,,OK,,
 4270,197333,Sort by cost,Lua/UI/Stash.lua(00019),,,,,,,,依價格排序,,OK,,
-4276,197602,Compact the Stash,Lua/UI/Stash.lua(00025),,,,,,,,堆壓倉庫,,OK,,
+4276,197602,Compact the Stash,Lua/UI/Stash.lua(00025),,,,,,,,向前排滿,,OK,,
 4503,198919,Hardcore Stash,Lua/UI/Stash.lua(00270),,,,,,,,斯戴許硬漢,,OK,,
 4012,195716,Menu,Lua/UI/Stash.lua(00406),,,,,,,,選單,,OK,,
 1520,194283,Stash,Lua/UI/Stash.lua(00418),,,,,,,,斯戴許,,OK,,
