潤飾懸賞與尋寶

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -3083,9 +3083,9 @@ Rune Duration: <lightgreen><rune_duration_s>.<rune_duration_d></lightgreen> sec<
 4252,197294,<grey><name> (DONE)</grey>,Lua/ServerSideDrop.lua(00106),,,,,,,,<grey><name>（完成）</grey>,,OK,,
 4235,197009,<lightgreen2><name></lightgreen2>,Lua/ServerSideDrop.lua(00108),,,,,,,,<lightgreen2><name></lightgreen2>,,OK,,
 4259,197333,Completed: Bounty,Lua/ServerSideDrop.lua(00149),,,,,,,,完成：懸賞,,OK,,
-4260,198919,Epic monster slain. Seek more epic monsters on other maps,Lua/ServerSideDrop.lua(00152),,,,,,,,已殺死史詩怪物。到其它地圖上尋找更多史詩怪物。,,OK,,
+4260,198919,Epic monster slain. Seek more epic monsters on other maps,Lua/ServerSideDrop.lua(00152),,,,,,,,已殺死史詩怪物。到其它地圖上尋找更多史詩怪物吧。,,OK,,
 4261,197333,Completed: Treasure Hunt,Lua/ServerSideDrop.lua(00156),,,,,,,,完成：尋寶,,OK,,
-4262,197333,Treasure clue found. Seek more clues on other maps,Lua/ServerSideDrop.lua(00159),,,,,,,,已找到尋寶線索。到其它地圖上尋找更多線索。,,OK,,
+4262,197333,Treasure clue found. Seek more clues on other maps,Lua/ServerSideDrop.lua(00159),,,,,,,,已找到尋寶線索。到其它地圖上尋找更多線索吧。,,OK,,
 3990,197306,Slay epic monsters in the following locations:<newline>,Lua/ServerSideDrop.lua(00190),,,,,,,,殺死下列地點的史詩怪物：<newline>,,OK,,
 4051,196416,This bounty has been completed on <month>/<day>/<year>.,Lua/ServerSideDrop.lua(00197),,,,,,,,此懸賞令已於<year>/<month>/<day>完成。,,OK,,
 4202,196416,This bounty has expired on <month>/<day>/<year>.,Lua/ServerSideDrop.lua(00203),,,,,,,,此懸賞令已於<year>/<month>/<day>過期。,,OK,,
