--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -2413,7 +2413,7 @@ Tag <UseDefaultEmote> not present in original text",
 4031,195942,<purple>The Coup De Grace attack fires a piercing projectile that pushes back foes</purple>,Lua/LootWeapon.lua(00695),,,,,,,,<purple>致命恩刺會射出銳利的投射物震退敵人。</purple>,,OK,,
 4032,198919,<purple>Stacks Aether Charges on hits with the Charge attack. At 10 charges the Flurry attack grants Quickness and inflicts Frost to all foes in the area.</purple>,Lua/LootWeapon.lua(00703),,,,,,,,<purple>衝鋒刺會累積以太聚能。10次聚能後，疾風刺會附加<red></red>快手，並對範圍內的敵人造成結霜。</purple>,,OK,,
 4033,195942,<purple>The fourth and final Flurry attack unleashes a burst of projectiles that strike random foes. Enemies killed by those projectiles are turned into exploding chickens.</purple>,Lua/LootWeapon.lua(00711),,,,,,,,<purple>第四下和最後一下疾風刺會釋放大量投射物隨機攻擊敵人。被投射物殺死的敵人會變成爆裂小雞。</purple>,,OK,,
-4034,195942,<purple>The Whirlwind attack releases a second spinning scythe that damages foes.</purple>,Lua/LootWeapon.lua(00719),,,,,,,,<purple>旋風斬會釋放第二波迴旋巨鐮攻擊敵人。</purple>,,OK,,
+4034,195942,<purple>The Whirlwind attack releases a second spinning scythe that damages foes.</purple>,Lua/LootWeapon.lua(00719),,,,,,,,<purple>旋風斬會釋放兩把迴旋巨鐮攻擊敵人。</purple>,,OK,,
 4035,198395,<purple>Monsters hit with this weapon release souls. Gather souls to gain overdrive.</purple>,Lua/LootWeapon.lua(00727),,,,,,,,<purple>使用這把武器擊中的怪物會溢出靈魂。收集靈魂可獲得超能。</purple>,,OK,,
 4036,195942,<purple>The Whirlwind attack shoots projectiles</purple>,Lua/LootWeapon.lua(00735),,,,,,,,<purple>旋風斬會射出投射物。</purple>,,OK,,
 4037,195942,<purple>The Shockwave attack hits in a large circle and inflicts Frost.</purple>,Lua/LootWeapon.lua(00743),,,,,,,,<purple>衝擊波的範圍更大並造成結霜。</purple>,,OK,,
